# crypto-sentiment-trader

./: .gitignore  LICENSE  README.md  main.py  master_reddit_server.csv  pyproject.toml  requirements.txt  validate_dataset.py  visualize_performance.py  visualize_trades.py
rebuild/: README.md  pyproject.toml
rebuild/artifacts/: README.md
rebuild/codex_rebuild/: 00_MASTER_PLAN.md  01_TARGET_ARCHITECTURE.md  02_BASELINE_AND_SAFETY.md  03_PACKAGE_SCAFFOLD_AND_CONFIG.md  04_MARKET_DATA_PIPELINE.md  05_FEATURES_NOISE_AND_TARGET.md  06_MODEL_AND_VALIDATION.md  07_BACKTEST_AND_REPORTING.md  08_CLI_AND_REPRODUCIBLE_RUN.md  09_LEGACY_QUARANTINE_AND_DOCS.md  10_SENTIMENT_EXPERIMENT.md  11_PAPER_TRADING_GATE.md  HANDOFF.md  README.md  USER_TESTING.md
rebuild/codex_rebuild/model_refinement/: 01_THRESHOLD_SWEEP_AND_DIAGNOSTICS.md  02_TARGET_AND_HORIZON_EXPERIMENTS.md  03_MARKET_FEATURE_GROUPS.md  04_EXPERIMENT_ORCHESTRATION.md  05_SENTIMENT_REEVALUATION_GATE.md  06_MODEL_CLASS_COMPARISON.md  README.md
rebuild/configs/: README.md  baseline.yaml
rebuild/configs/experiments/: market_signal_grid.yaml
rebuild/scripts/: build_hourly_sentiment_from_server_csv.py  run_market_feature_group_experiment.py  run_recency_window_diagnostic.py  run_target_horizon_grid.py  run_threshold_sweep.py
rebuild/src/trader/: __init__.py  cli.py  config.py  workflow.py
rebuild/tests/fixtures/: README.md  btcusdt_1h.csv
rebuild/tests/integration/: README.md  test_experiment_grid.py  test_market_fixture_storage.py  test_offline_baseline_workflow.py
rebuild/tests/unit/: README.md  test_cli.py  (+2 more)
(+134 files in other folders)
